// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imageCaption snapshots should render caption with text (Black T-shirt) and letter (A) when given this as property 1`] = `
<div
  className="captionContainer"
>
  <div
    className="captionContent"
  >
    <span
      className=""
    >
      A
    </span>
    <div
      className="captionDivider"
    />
    <span>
      Black T-shirt
    </span>
  </div>
</div>
`;

exports[`imageCaption snapshots should render caption without letter and divider when not given this as a property 1`] = `
<div
  className="captionContainer"
>
  <div
    className="captionContent"
  >
    <span
      className=" hidden "
    />
    <div
      className="captionDivider hidden "
    />
    <span>
      Black T-shirt
    </span>
  </div>
</div>
`;
